[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/big-mamoth.png" type="Texture" id=2]
[ext_resource path="res://assets/shadow-mamoth.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.90667

[sub_resource type="Animation" id=2]
resource_name = "Dead"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "create_dust_effect"
}, {
"args": [  ],
"method": "create_dust_effect"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 500.0

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.98563, 7.94644 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
SPEED = 5000

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -1, 8 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
frame = 7

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.0350766 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionRange" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 4 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackRange" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="PerspectiveArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerspectiveArea"]
position = Vector2( 0, 16 )
shape = SubResource( 6 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="PerspectiveArea" to="." method="_on_PerspectiveArea_body_entered"]
[connection signal="body_exited" from="PerspectiveArea" to="." method="_on_PerspectiveArea_body_exited"]
